mfrc522.rs

pub const PCD_Register_CommandReg: PCD_Register = 2;
pub const PCD_Register_ComIEnReg: PCD_Register = 4;
pub const PCD_Register_DivIEnReg: PCD_Register = 6;
pub const PCD_Register_ComIrqReg: PCD_Register = 8;
pub const PCD_Register_DivIrqReg: PCD_Register = 10;
pub const PCD_Register_ErrorReg: PCD_Register = 12;
pub const PCD_Register_Status1Reg: PCD_Register = 14;
pub const PCD_Register_Status2Reg: PCD_Register = 16;
pub const PCD_Register_FIFODataReg: PCD_Register = 18;
pub const PCD_Register_FIFOLevelReg: PCD_Register = 20;
pub const PCD_Register_WaterLevelReg: PCD_Register = 22;
pub const PCD_Register_ControlReg: PCD_Register = 24;
pub const PCD_Register_BitFramingReg: PCD_Register = 26;
pub const PCD_Register_CollReg: PCD_Register = 28;
pub const PCD_Register_ModeReg: PCD_Register = 34;
pub const PCD_Register_TxModeReg: PCD_Register = 36;
pub const PCD_Register_RxModeReg: PCD_Register = 38;
pub const PCD_Register_TxControlReg: PCD_Register = 40;
pub const PCD_Register_TxASKReg: PCD_Register = 42;
pub const PCD_Register_TxSelReg: PCD_Register = 44;
pub const PCD_Register_RxSelReg: PCD_Register = 46;
pub const PCD_Register_RxThresholdReg: PCD_Register = 48;
pub const PCD_Register_DemodReg: PCD_Register = 50;
pub const PCD_Register_MfTxReg: PCD_Register = 56;
pub const PCD_Register_MfRxReg: PCD_Register = 58;
pub const PCD_Register_SerialSpeedReg: PCD_Register = 62;
pub const PCD_Register_CRCResultRegH: PCD_Register = 66;
pub const PCD_Register_CRCResultRegL: PCD_Register = 68;
pub const PCD_Register_ModWidthReg: PCD_Register = 72;
pub const PCD_Register_RFCfgReg: PCD_Register = 76;
pub const PCD_Register_GsNReg: PCD_Register = 78;
pub const PCD_Register_CWGsPReg: PCD_Register = 80;
pub const PCD_Register_ModGsPReg: PCD_Register = 82;
pub const PCD_Register_TModeReg: PCD_Register = 84;
pub const PCD_Register_TPrescalerReg: PCD_Register = 86;
pub const PCD_Register_TReloadRegH: PCD_Register = 88;
pub const PCD_Register_TReloadRegL: PCD_Register = 90;
pub const PCD_Register_TCntValueRegH: PCD_Register = 92;
pub const PCD_Register_TCntValueRegL: PCD_Register = 94;
pub const PCD_Register_TestSel1Reg: PCD_Register = 98;
pub const PCD_Register_TestSel2Reg: PCD_Register = 100;
pub const PCD_Register_TestPinEnReg: PCD_Register = 102;
pub const PCD_Register_TestPinValueReg: PCD_Register = 104;
pub const PCD_Register_TestBusReg: PCD_Register = 106;
pub const PCD_Register_AutoTestReg: PCD_Register = 108;
pub const PCD_Register_VersionReg: PCD_Register = 110;
pub const PCD_Register_AnalogTestReg: PCD_Register = 112;
pub const PCD_Register_TestDAC1Reg: PCD_Register = 114;
pub const PCD_Register_TestDAC2Reg: PCD_Register = 116;
pub const PCD_Register_TestADCReg: PCD_Register = 118;
#[doc = " MFRC522 registers (described in chapter 9 of the datasheet).\n When using SPI all addresses are shifted one bit left in the \"SPI address\n byte\" (section 8.1.2.3)"]
pub type PCD_Register = u32;
pub const PCD_Command_PCD_Idle: PCD_Command = 0;
pub const PCD_Command_PCD_Mem: PCD_Command = 1;
pub const PCD_Command_PCD_GenerateRandomID: PCD_Command = 2;
pub const PCD_Command_PCD_CalcCRC: PCD_Command = 3;
pub const PCD_Command_PCD_Transmit: PCD_Command = 4;
pub const PCD_Command_PCD_NoCmdChange: PCD_Command = 7;
pub const PCD_Command_PCD_Receive: PCD_Command = 8;
pub const PCD_Command_PCD_Transceive: PCD_Command = 12;
pub const PCD_Command_PCD_MFAuthent: PCD_Command = 14;
pub const PCD_Command_PCD_SoftReset: PCD_Command = 15;
pub type PCD_Command = u32;
pub const PICC_Command_PICC_CMD_REQA: PICC_Command = 38;
pub const PICC_Command_PICC_CMD_WUPA: PICC_Command = 82;
pub const PICC_Command_PICC_CMD_CT: PICC_Command = 136;
pub const PICC_Command_PICC_CMD_SEL_CL1: PICC_Command = 147;
pub const PICC_Command_PICC_CMD_SEL_CL2: PICC_Command = 149;
pub const PICC_Command_PICC_CMD_SEL_CL3: PICC_Command = 151;
pub const PICC_Command_PICC_CMD_HLTA: PICC_Command = 80;
pub const PICC_Command_PICC_CMD_MF_AUTH_KEY_A: PICC_Command = 96;
pub const PICC_Command_PICC_CMD_MF_AUTH_KEY_B: PICC_Command = 97;
pub const PICC_Command_PICC_CMD_MF_READ: PICC_Command = 48;
pub const PICC_Command_PICC_CMD_MF_WRITE: PICC_Command = 160;
pub const PICC_Command_PICC_CMD_MF_DECREMENT: PICC_Command = 192;
pub const PICC_Command_PICC_CMD_MF_INCREMENT: PICC_Command = 193;
pub const PICC_Command_PICC_CMD_MF_RESTORE: PICC_Command = 194;
pub const PICC_Command_PICC_CMD_MF_TRANSFER: PICC_Command = 176;
pub const PICC_Command_PICC_CMD_UL_WRITE: PICC_Command = 162;
pub type PICC_Command = u32;
pub const MIFARE_Misc_MF_ACK: MIFARE_Misc = 10;
pub const MIFARE_Misc_MF_KEY_SIZE: MIFARE_Misc = 6;
pub type MIFARE_Misc = u32;
pub const PICC_Type_PICC_TYPE_UNKNOWN: PICC_Type = 0;
pub const PICC_Type_PICC_TYPE_ISO_14443_4: PICC_Type = 1;
pub const PICC_Type_PICC_TYPE_ISO_18092: PICC_Type = 2;
pub const PICC_Type_PICC_TYPE_MIFARE_MINI: PICC_Type = 3;
pub const PICC_Type_PICC_TYPE_MIFARE_1K: PICC_Type = 4;
pub const PICC_Type_PICC_TYPE_MIFARE_4K: PICC_Type = 5;
pub const PICC_Type_PICC_TYPE_MIFARE_UL: PICC_Type = 6;
pub const PICC_Type_PICC_TYPE_MIFARE_PLUS: PICC_Type = 7;
pub const PICC_Type_PICC_TYPE_TNP3XXX: PICC_Type = 8;
pub const PICC_Type_PICC_TYPE_NOT_COMPLETE: PICC_Type = 255;
pub type PICC_Type = u32;
pub const StatusCode_STATUS_OK: StatusCode = 1;
pub const StatusCode_STATUS_ERROR: StatusCode = 2;
pub const StatusCode_STATUS_COLLISION: StatusCode = 3;
pub const StatusCode_STATUS_TIMEOUT: StatusCode = 4;
pub const StatusCode_STATUS_NO_ROOM: StatusCode = 5;
pub const StatusCode_STATUS_INTERNAL_ERROR: StatusCode = 6;
pub const StatusCode_STATUS_INVALID: StatusCode = 7;
pub const StatusCode_STATUS_CRC_WRONG: StatusCode = 8;
pub const StatusCode_STATUS_MIFARE_NACK: StatusCode = 9;
pub type StatusCode = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Uid {
    pub size: u8,
    pub uidByte: [u8; 10usize],
    pub sak: u8,
}
#[test]
fn bindgen_test_layout_Uid() {
    const UNINIT: ::core::mem::MaybeUninit<Uid> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Uid>(),
        12usize,
        concat!("Size of: ", stringify!(Uid))
    );
    assert_eq!(
        ::core::mem::align_of::<Uid>(),
        1usize,
        concat!("Alignment of ", stringify!(Uid))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(Uid), "::", stringify!(size))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).uidByte) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(Uid),
            "::",
            stringify!(uidByte)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sak) as usize - ptr as usize },
        11usize,
        concat!("Offset of field: ", stringify!(Uid), "::", stringify!(sak))
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MIFARE_Key {
    pub keyByte: [u8; 6usize],
}
#[test]
fn bindgen_test_layout_MIFARE_Key() {
    const UNINIT: ::core::mem::MaybeUninit<MIFARE_Key> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<MIFARE_Key>(),
        6usize,
        concat!("Size of: ", stringify!(MIFARE_Key))
    );
    assert_eq!(
        ::core::mem::align_of::<MIFARE_Key>(),
        1usize,
        concat!("Alignment of ", stringify!(MIFARE_Key))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).keyByte) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MIFARE_Key),
            "::",
            stringify!(keyByte)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mfrc522_t {
    pub m_SPI: cyhal_spi_t,
    pub m_reset: cyhal_gpio_t,
    pub m_cs: cyhal_gpio_t,
    pub uid: Uid,
}
#[test]
fn bindgen_test_layout_mfrc522_t() {
    const UNINIT: ::core::mem::MaybeUninit<mfrc522_t> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<mfrc522_t>(),
        240usize,
        concat!("Size of: ", stringify!(mfrc522_t))
    );
    assert_eq!(
        ::core::mem::align_of::<mfrc522_t>(),
        8usize,
        concat!("Alignment of ", stringify!(mfrc522_t))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).m_SPI) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(mfrc522_t),
            "::",
            stringify!(m_SPI)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).m_reset) as usize - ptr as usize },
        216usize,
        concat!(
            "Offset of field: ",
            stringify!(mfrc522_t),
            "::",
            stringify!(m_reset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).m_cs) as usize - ptr as usize },
        220usize,
        concat!(
            "Offset of field: ",
            stringify!(mfrc522_t),
            "::",
            stringify!(m_cs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).uid) as usize - ptr as usize },
        224usize,
        concat!(
            "Offset of field: ",
            stringify!(mfrc522_t),
            "::",
            stringify!(uid)
        )
    );
}
extern "C" {
    #[doc = " Setup GPIOs and SPI for the MFRC522."]
    pub fn MFRC522_Init(
        mfrc: *mut mfrc522_t,
        mosi: cyhal_gpio_t,
        miso: cyhal_gpio_t,
        sclk: cyhal_gpio_t,
        cs: cyhal_gpio_t,
        reset: cyhal_gpio_t,
    );
}
extern "C" {
    #[doc = " Initializes the MFRC522 chip."]
    pub fn PCD_Init(mfrc: *mut mfrc522_t);
}
extern "C" {
    #[doc = " Performs a soft reset on the MFRC522 chip and waits for it to be ready\n again."]
    pub fn PCD_Reset(mfrc: *mut mfrc522_t);
}
extern "C" {
    #[doc = " Turns the antenna on by enabling pins TX1 and TX2.\n After a reset these pins disabled."]
    pub fn PCD_AntennaOn(mfrc: *mut mfrc522_t);
}
extern "C" {
    #[doc = " Writes a byte to the specified register in the MFRC522 chip.\n The interface is described in the datasheet section 8.1.2.\n\n @param reg   The register to write to. One of the PCD_Register enums.\n @param value The value to write."]
    pub fn PCD_WriteRegister(mfrc: *mut mfrc522_t, reg: u8, value: u8);
}
extern "C" {
    #[doc = " Writes a number of bytes to the specified register in the MFRC522 chip.\n The interface is described in the datasheet section 8.1.2.\n\n @param reg    The register to write to. One of the PCD_Register enums.\n @param count  The number of bytes to write to the register\n @param values The values to write. Byte array."]
    pub fn PCD_WriteRegisterBytes(mfrc: *mut mfrc522_t, reg: u8, count: u8, values: *mut u8);
}
extern "C" {
    #[doc = " Reads a byte from the specified register in the MFRC522 chip.\n The interface is described in the datasheet section 8.1.2.\n\n @param reg The register to read from. One of the PCD_Register enums.\n @returns Register value"]
    pub fn PCD_ReadRegister(mfrc: *mut mfrc522_t, reg: u8) -> u8;
}
extern "C" {
    #[doc = " Reads a number of bytes from the specified register in the MFRC522 chip.\n The interface is described in the datasheet section 8.1.2.\n\n @param reg     The register to read from. One of the PCD_Register enums.\n @param count   The number of bytes to read.\n @param values  Byte array to store the values in.\n @param rxAlign Only bit positions rxAlign..7 in values[0] are updated."]
    pub fn PCD_ReadRegisterBytes(
        mfrc: *mut mfrc522_t,
        reg: u8,
        count: u8,
        values: *mut u8,
        rxAlign: u8,
    );
}
